Se implementaron los puntos restantes hasta el 15 y se creó la interfaz gráfica

--- a/AppWeb/styles.css
+++ b/AppWeb/styles.css
@@ -1,7 +1,6 @@
 .container-lg .card {
-    background: wheat;
+    background-color: dodgerblue;
 }
-
 
 .btn-ejc:hover{
     background-color: transparent !important;
@@ -21,7 +20,7 @@
     display:block;
     margin:auto; 
     width: 80%;
-    height: 200px;
+    height: 400px;
 }
 
 .container-lg .card .textMensaje .placeholder{
